src/app/events/events/events.component.scss
h2 {
  padding: 0.75rem;
}

.fatal-injury {
  color: var(--fatal-color);
}

.non-fatal-injury {
  color: var(--non-fatal-color)
}

.serious-injury {
  color: var(--serious-color);
}

.minor-injury {
  color: var(--minor-color);
}

:host ::ng-deep .p-datatable .p-datatable-tbody > tr {
  cursor: pointer;
}

:host ::ng-deep .p-datatable .p-datatable-tbody > tr > td
{
  padding: .5em .5em;
}

:host ::ng-deep .p-datatable .p-datatable-thead > tr > th {
  padding: .75em .75em;
}

:host ::ng-deep .p-datatable{
  width: 80rem;
  display: flex;
}

